--- a/tests/test_cases/2021/commands/7E0.7E8.221069.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221069.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_PQ35_ENG_START_QTY: 13.75
   response: 7E805621069055F
 - expected_values:
+    VOLKSWAGEN_PQ35_ENG_START_QTY: 15.3
+  response: 7E80562106905FA
+- expected_values:
     VOLKSWAGEN_PQ35_ENG_START_QTY: 16.01
   response: '7E8056210690641'
 - expected_values:
