--- a/tests/test_cases/2021/commands/7E0.7E8.22117E.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22117E.yaml
@@ -4,8 +4,14 @@ test_cases:
     VOLKSWAGEN_PQ35_TURB_ACT_1_B1: 72.26
   response: 7E80562117E1C3A
 - expected_values:
+    VOLKSWAGEN_PQ35_TURB_ACT_1_B1: 72.65
+  response: 7E80562117E1C61
+- expected_values:
     VOLKSWAGEN_PQ35_TURB_ACT_1_B1: 78.88
   response: 7E80562117E1ED0
+- expected_values:
+    VOLKSWAGEN_PQ35_TURB_ACT_1_B1: 78.9
+  response: 7E80562117E1ED2
 - expected_values:
     VOLKSWAGEN_PQ35_TURB_ACT_1_B1: 79.49
   response: 7E80562117E1F0D
