--- a/tests/test_cases/2021/commands/7E1.7E9.22100E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22100E.yaml
@@ -19,6 +19,12 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LIMITATION: 235
   response: 7E90562100E5C12
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LIMITATION: 248
+  response: 7E90562100E6013
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LIMITATION: 302
+  response: 7E90562100E9817
+- expected_values:
     VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LIMITATION: 200
   response: 7E90562100EA00F
 - expected_values:
