--- a/tests/test_cases/2021/commands/7E1.7E9.221086.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221086.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G3: 10.26
   response: '7E9056210860204'
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G3: 10.3
+  response: '7E9056210860604'
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G3: 10.31
   response: '7E9056210860704'
 - expected_values:
