--- a/tests/test_cases/2021/commands/7E1.7E9.22109E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22109E.yaml
@@ -7,6 +7,12 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G5: 8.81
   response: 7E90562109E7103
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G5: 8.85
+  response: 7E90562109E7503
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G5: 8.87
+  response: 7E90562109E7703
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G5: 8.93
   response: 7E90562109E7D03
 - expected_values:
