--- a/tests/test_cases/2021/commands/7E1.7E9.2210C9.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210C9.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_SUCCESSFUL_ADAPTS_COUNTER: 1916
   response: 7E9056210C97C07
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_SUCCESSFUL_ADAPTS_COUNTER: 1917
+  response: 7E9056210C97D07
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_SUCCESSFUL_ADAPTS_COUNTER: 1918
+  response: 7E9056210C97E07
