--- a/tests/test_cases/2021/commands/7E1.7E9.2210CA.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210CA.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_KISS_POINT_PART_1_ODO_READING: 84150
   response: 7E9056210CADF20
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_KISS_POINT_PART_1_ODO_READING: 84180
+  response: 7E9056210CAE220
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_KISS_POINT_PART_1_ODO_READING: 84190
+  response: 7E9056210CAE320
