--- a/tests/test_cases/2021/commands/7E1.7E9.22380B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22380B.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_OUTPUT_SPD_7E1_380B: 0
   response: 7E90562380B0000
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_OUTPUT_SPD_7E1_380B: 573
+  response: 7E90562380B3D02
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_OUTPUT_SPD_7E1_380B: 334
   response: 7E90562380B4E01
 - expected_values:
@@ -12,6 +15,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_OUTPUT_SPD_7E1_380B: 111
   response: 7E90562380B6F00
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_OUTPUT_SPD_7E1_380B: 413
+  response: 7E90562380B9D01
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_OUTPUT_SPD_7E1_380B: 184
   response: 7E90562380BB800
