--- a/tests/test_cases/2021/commands/7E1.7E9.22380F.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22380F.yaml
@@ -13,6 +13,9 @@ test_cases:
     VOLKSWAGEN_MQB_OUTPUT_SHAFT_2: 20225
   response: 7E90562380F4F01
 - expected_values:
+    VOLKSWAGEN_MQB_OUTPUT_SHAFT_2: 23554
+  response: 7E90562380F5C02
+- expected_values:
     VOLKSWAGEN_MQB_OUTPUT_SHAFT_2: 30721
   response: 7E90562380F7801
 - expected_values:
