--- a/tests/test_cases/2021/commands/7E1.7E9.223826.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223826.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 374.2
   response: 7E9056238269E0E
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 379.3
+  response: 7E905623826D10E
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 380.6
   response: 7E905623826DE0E
 - expected_values:
