--- a/tests/test_cases/2021/commands/7E1.7E9.22382E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22382E.yaml
@@ -13,5 +13,11 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 5
   response: 7E90562382E6400
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 32.75
+  response: 7E90562382E8F02
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 60.3
   response: 7E90562382EB604
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 125.45
+  response: 7E90562382ECD09
