--- a/tests/test_cases/2021/commands/7E1.7E9.223838.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223838.yaml
@@ -7,8 +7,14 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: -100
   response: 7E90562383830F8
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: -10
+  response: 7E90562383838FF
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 3.35
   response: '7E9056238384300'
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 235.15
   response: 7E9056238385F12
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 96
+  response: '7E9056238388007'
