--- a/tests/test_cases/2021/commands/7E1.7E9.22385A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22385A.yaml
@@ -19,5 +19,8 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0
   response: 7E90562385A0DFC
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 8.39
+  response: 7E90562385A4703
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0
   response: 7E90562385AFEFF
