--- a/tests/test_cases/2021/commands/7E1.7E9.22388B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22388B.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 1974
   response: 7E90562388BB607
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 1975
+  response: 7E90562388BB707
