--- a/tests/test_cases/2021/commands/7E1.7E9.2238EB.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2238EB.yaml
@@ -21,3 +21,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ACTUAL_P: 3.89
   response: 7E9056238EB8501
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ACTUAL_P: 4.95
+  response: 7E9056238EBEF01
