--- a/tests/test_cases/2021/commands/7E0.22100C|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22100C|din=03.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.22100C|din=03
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_FUEL_LVL_2: 17
+  response: 7E80562100C06A4
+- expected_values:
+    VOLKSWAGEN_PQ35_FUEL_LVL_2: 18
+  response: 7E80562100C0708
+- expected_values:
     VOLKSWAGEN_PQ35_FUEL_LVL_2: 19
   response: 7E80562100C076C
 - expected_values:
