--- a/tests/test_cases/2021/commands/7E0.22162F|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22162F|din=03.yaml
@@ -19,6 +19,12 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_AIR_P_SENSOR_RAW_VALUE: 14
   response: 7E80562162F000E
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_AIR_P_SENSOR_RAW_VALUE: 15
+  response: 7E80562162F000F
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_AIR_P_SENSOR_RAW_VALUE: 20
+  response: 7E80562162F0014
+- expected_values:
     VOLKSWAGEN_MQB_DPF_AIR_P_SENSOR_RAW_VALUE: 22
   response: 7E80562162F0016
 - expected_values:
