--- a/tests/test_cases/2021/commands/7E0.7E8.221024.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221024.yaml
@@ -13,8 +13,14 @@ test_cases:
     VOLKSWAGEN_MQB_AIR_MASS_1: 46.5
   response: 7E80562102401D1
 - expected_values:
+    VOLKSWAGEN_MQB_AIR_MASS_1: 46.6
+  response: 7E80562102401D2
+- expected_values:
     VOLKSWAGEN_MQB_AIR_MASS_1: 56.5
   response: '7E8056210240235'
+- expected_values:
+    VOLKSWAGEN_MQB_AIR_MASS_1: 67.7
+  response: 7E80562102402A5
 - expected_values:
     VOLKSWAGEN_MQB_AIR_MASS_1: 70.8
   response: 7E80562102402C4
