--- a/tests/test_cases/2021/commands/7E1.7E9.22100A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22100A.yaml
@@ -13,11 +13,17 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_VEHICLE_SPD_FROM_TRANSMISSION: 31.2
   response: 7E90562100A3801
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_VEHICLE_SPD_FROM_TRANSMISSION: 40.3
+  response: 7E90562100A9301
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_VEHICLE_SPD_FROM_TRANSMISSION: 42.2
   response: 7E90562100AA601
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_VEHICLE_SPD_FROM_TRANSMISSION: 17.1
   response: 7E90562100AAB00
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_VEHICLE_SPD_FROM_TRANSMISSION: 69.6
+  response: 7E90562100AB802
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_VEHICLE_SPD_FROM_TRANSMISSION: 21.5
   response: 7E90562100AD700
