--- a/tests/test_cases/2021/commands/7E1.7E9.22102C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22102C.yaml
@@ -10,8 +10,14 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_T: 29
   response: 7E90562102C1D00
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_T: 44
+  response: 7E90562102C2C00
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_T: 47
   response: 7E90562102C2F00
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_T: 53
+  response: 7E90562102C3500
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_T: 55
   response: 7E90562102C3700
