--- a/tests/test_cases/2021/commands/7E1.7E9.22106E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22106E.yaml
@@ -15,3 +15,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_1_POS: 4.28
   response: 7E90562106EAC01
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_1_POS: 4.3
+  response: 7E90562106EAE01
