--- a/tests/test_cases/2021/commands/7E1.7E9.221070.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221070.yaml
@@ -16,6 +16,9 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_2_POS: 10.19
   response: 7E905621070FB03
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_2_POS: 10.2
+  response: 7E905621070FC03
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_2_POS: 10.21
   response: 7E905621070FD03
 - expected_values:
