--- a/tests/test_cases/2021/commands/7E1.7E9.221082.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221082.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G1: -8.82
   response: 7E9056210828EFC
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G1: -8.81
+  response: 7E9056210828FFC
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G1: -8.79
   response: 7E90562108291FC
 - expected_values:
