--- a/tests/test_cases/2021/commands/7E1.7E9.221084.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221084.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GANGSTELLER_A_ADAPT_NEUTRALPOS: -0.35
   response: 7E905621084DDFF
 - expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_A_ADAPT_NEUTRALPOS: -0.28
+  response: 7E905621084E4FF
+- expected_values:
     VOLKSWAGEN_PQ35_GANGSTELLER_A_ADAPT_NEUTRALPOS: -0.27
   response: 7E905621084E5FF
 - expected_values:
@@ -18,6 +21,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GANGSTELLER_A_ADAPT_NEUTRALPOS: -0.25
   response: 7E905621084E7FF
+- expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_A_ADAPT_NEUTRALPOS: -0.22
+  response: 7E905621084EAFF
 - expected_values:
     VOLKSWAGEN_PQ35_GANGSTELLER_A_ADAPT_NEUTRALPOS: -0.21
   response: 7E905621084EBFF
