--- a/tests/test_cases/2021/commands/7E1.7E9.221085.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221085.yaml
@@ -19,5 +19,8 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.1
   response: 7E905621085D200
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.14
+  response: 7E905621085D600
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.15
   response: 7E905621085D700
