--- a/tests/test_cases/2021/commands/7E1.7E9.221090.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221090.yaml
@@ -18,3 +18,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G2: -9.75
   response: 7E90562109031FC
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G2: -9.74
+  response: 7E90562109032FC
