--- a/tests/test_cases/2021/commands/7E1.7E9.221091.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221091.yaml
@@ -13,8 +13,14 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G2: -2.34
   response: 7E90562109116FF
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G2: -2.33
+  response: 7E90562109117FF
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G2: -2.29
   response: 7E9056210911BFF
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G2: -2.28
+  response: 7E9056210911CFF
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G2: -2.25
   response: 7E9056210911FFF
