--- a/tests/test_cases/2021/commands/7E1.7E9.221093.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221093.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G4: 2.59
   response: '7E9056210930301'
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G4: 2.64
+  response: '7E9056210930801'
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G4: 2.5
   response: 7E905621093FA00
 - expected_values:
