--- a/tests/test_cases/2021/commands/7E1.7E9.221094.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221094.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G4: 9.61
   response: 7E905621094C103
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G4: 9.63
+  response: 7E905621094C303
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G4: 9.67
   response: 7E905621094C703
 - expected_values:
@@ -15,6 +18,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G4: 9.74
   response: 7E905621094CE03
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G4: 9.76
+  response: 7E905621094D003
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G4: 9.86
   response: 7E905621094DA03
