--- a/tests/test_cases/2021/commands/7E1.7E9.22109F.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22109F.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G5: 1.58
   response: 7E90562109F9E00
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G5: 1.64
+  response: 7E90562109FA400
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G5: 1.7
   response: 7E90562109FAA00
 - expected_values:
