--- a/tests/test_cases/2021/commands/7E1.7E9.2210A2.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210A2.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G7: -9.96
   response: 7E9056210A21CFC
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G7: -9.89
+  response: 7E9056210A223FC
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G7: -9.87
   response: 7E9056210A225FC
 - expected_values:
