--- a/tests/test_cases/2021/commands/7E1.7E9.2210AD.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210AD.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G6: 1.79
   response: 7E9056210ADB300
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G6: 1.82
+  response: 7E9056210ADB600
