--- a/tests/test_cases/2021/commands/7E1.7E9.223821.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223821.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_ACTUAL: 3.85
   response: '7E9056238218101'
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_ACTUAL: 4.24
+  response: 7E905623821A801
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_ACTUAL: 7
   response: 7E905623821BC02
 - expected_values:
