--- a/tests/test_cases/2021/commands/7E1.7E9.223834.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223834.yaml
@@ -13,8 +13,14 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 554.4
   response: 7E905623834A815
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 503.5
+  response: 7E905623834AB13
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 350.6
   response: 7E905623834B20D
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 380.9
+  response: 7E905623834E10E
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 50
   response: 7E905623834F401
