--- a/tests/test_cases/2021/commands/7E1.7E9.223835.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223835.yaml
@@ -10,11 +10,17 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 393
   response: 7E9056238355A0F
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 90
+  response: '7E9056238358403'
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 609
   response: 7E905623835CA17
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 48
   response: 7E905623835E001
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 535
+  response: 7E905623835E614
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 49
   response: 7E905623835EA01
