--- a/tests/test_cases/2021/commands/7E1.7E9.22383D.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22383D.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 411.9
   response: 7E90562383D1710
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 463.2
+  response: 7E90562383D1812
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 364.3
   response: 7E90562383D3B0E
 - expected_values:
