--- a/tests/test_cases/2021/commands/7E1.7E9.223862.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223862.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_C: 0
   response: '7E9056238620000'
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_C: 2.73
+  response: '7E9056238621101'
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_C: 10.41
   response: '7E9056238621104'
 - expected_values:
@@ -18,6 +21,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_C: 0
   response: 7E905623862F8FF
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_C: 0
+  response: 7E905623862F9FF
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_C: 0
   response: 7E905623862FBFF
