--- a/tests/test_cases/2021/commands/7E1.7E9.22386A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22386A.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.22386A
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_D: 0.01
+  response: 7E90562386A0100
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_D: 0.05
   response: 7E90562386A0500
 - expected_values:
