--- a/tests/test_cases/2021/commands/7E1.7E9.22388C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22388C.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 489
   response: 7E90562388CE901
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 490
+  response: 7E90562388CEA01
