--- a/tests/test_cases/2021/commands/7E1.7E9.2238ED.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2238ED.yaml
@@ -22,5 +22,8 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_CMD_P: 6.06
   response: 7E9056238ED5E02
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_CMD_P: 14
+  response: 7E9056238ED7805
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_CMD_P: 2.38
   response: 7E9056238EDEE00
