Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E0.22123F|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22123F|din=03.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.22123F|din=03
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_OIL_DYN_AVG: 8.092
+  response: 7E80562123F07E7
+- expected_values:
     VOLKSWAGEN_PQ35_OIL_DYN_AVG: 9.328
   response: 7E80562123F091C
 - expected_values:
