--- a/tests/test_cases/2021/commands/7E0.7E8.221ABE.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ABE.yaml
@@ -4,8 +4,11 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_SOOT_MASS_MEASURED: -8.6
   response: 7E805621ABEFCA4
 - expected_values:
-    VOLKSWAGEN_MQB_DPF_SOOT_MASS_MEASURED: -2.63
-  response: 7E805621ABEFEF9
+    VOLKSWAGEN_MQB_DPF_SOOT_MASS_MEASURED: -7.71
+  response: 7E805621ABEFCFD
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_SOOT_MASS_MEASURED: -7.66
+  response: 7E805621ABEFD02
 - expected_values:
     VOLKSWAGEN_MQB_DPF_SOOT_MASS_MEASURED: -2.08
   response: 7E805621ABEFF30
