--- a/tests/test_cases/2021/commands/7E1.7E9.22109F.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22109F.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G5: 1.48
   response: 7E90562109F9400
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G5: 1.53
+  response: 7E90562109F9900
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G5: 1.56
   response: 7E90562109F9C00
 - expected_values:
@@ -18,6 +21,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G5: 1.71
   response: 7E90562109FAB00
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G5: 1.73
+  response: 7E90562109FAD00
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G5: 1.75
   response: 7E90562109FAF00
