--- a/tests/test_cases/2021/commands/7E1.7E9.223826.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223826.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 387
   response: 7E9056238261E0F
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 371.6
+  response: 7E905623826840E
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 372.9
   response: 7E905623826910E
 - expected_values:
@@ -21,6 +24,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 381.4
   response: 7E905623826E60E
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 100
+  response: 7E905623826E803
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 382.3
   response: 7E905623826EF0E
