--- a/tests/test_cases/2021/commands/7E1.7E9.22382B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22382B.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_ACTUAL: 365
   response: 7E90562382B420E
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_ACTUAL: 353
+  response: 7E90562382BCA0D
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_ACTUAL: 1198
   response: 7E90562382BCC2E
 - expected_values:
@@ -21,3 +24,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_ACTUAL: 1201
   response: 7E90562382BEA2E
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_ACTUAL: 358
+  response: 7E90562382BFC0D
