--- a/tests/test_cases/2021/commands/7E1.7E9.223838.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223838.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 0
   response: '7E9056238380000'
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 179.7
+  response: 7E9056238380A0E
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: -100
   response: 7E90562383830F8
 - expected_values:
@@ -18,3 +21,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 96
   response: '7E9056238388007'
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 21.7
+  response: 7E905623838B201
