--- a/tests/test_cases/2021/commands/7E1.7E9.22385A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22385A.yaml
@@ -23,4 +23,10 @@ test_cases:
   response: 7E90562385A4703
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0
+  response: 7E90562385AFAFF
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0
+  response: 7E90562385AFDFF
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0
   response: 7E90562385AFEFF
