--- a/tests/test_cases/2021/commands/714.77E.222211|fc=1.yaml
+++ b/tests/test_cases/2021/commands/714.77E.222211|fc=1.yaml
@@ -10,5 +10,11 @@ test_cases:
     VOLKSWAGEN_PQ35_CHG_AIR_P: 19.60784
   response: '77E0462221132'
 - expected_values:
+    VOLKSWAGEN_PQ35_CHG_AIR_P: 20
+  response: '77E0462221133'
+- expected_values:
     VOLKSWAGEN_PQ35_CHG_AIR_P: 25.4902
   response: '77E0462221141'
+- expected_values:
+    VOLKSWAGEN_PQ35_CHG_AIR_P: 26.27451
+  response: '77E0462221143'
