--- a/tests/test_cases/2021/commands/7E1.7E9.221010.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221010.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_CONVERTER_LOSS_TORQUE: 486.4
   response: '7E9056210102600'
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_CONVERTER_LOSS_TORQUE: 665.6
+  response: '7E9056210103400'
+- expected_values:
     VOLKSWAGEN_MQB_TCM_CONVERTER_LOSS_TORQUE: 678.4
   response: '7E9056210103500'
 - expected_values:
