--- a/tests/test_cases/2021/commands/7E1.7E9.22105B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22105B.yaml
@@ -1,6 +1,12 @@
 command_id: 7E1.7E9.22105B
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_2_POS: 10.49
+  response: 7E90562105B1904
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_2_POS: 10.5
+  response: 7E90562105B1A04
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_2_POS: 10.51
   response: 7E90562105B1B04
 - expected_values:
