--- a/tests/test_cases/2021/commands/7E1.7E9.22106E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22106E.yaml
@@ -16,5 +16,8 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_1_POS: 4.28
   response: 7E90562106EAC01
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_1_POS: 4.29
+  response: 7E90562106EAD01
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_1_POS: 4.3
   response: 7E90562106EAE01
