--- a/tests/test_cases/2021/commands/7E1.7E9.221085.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221085.yaml
@@ -13,11 +13,17 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.02
   response: 7E905621085CA00
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.07
+  response: 7E905621085CF00
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.08
   response: 7E905621085D000
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.1
   response: 7E905621085D200
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.12
+  response: 7E905621085D400
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.14
   response: 7E905621085D600
