--- a/tests/test_cases/2021/commands/7E1.7E9.221090.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221090.yaml
@@ -21,3 +21,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G2: -9.74
   response: 7E90562109032FC
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G2: -9.73
+  response: 7E90562109033FC
