--- a/tests/test_cases/2021/commands/7E1.7E9.221092.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221092.yaml
@@ -16,6 +16,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GANGSTELLER_B_ADAPT_NEUTRALPOS: -0.19
   response: 7E905621092EDFF
 - expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_B_ADAPT_NEUTRALPOS: -0.18
+  response: 7E905621092EEFF
+- expected_values:
     VOLKSWAGEN_PQ35_GANGSTELLER_B_ADAPT_NEUTRALPOS: -0.17
   response: 7E905621092EFFF
 - expected_values:
