--- a/tests/test_cases/2021/commands/7E1.7E9.221093.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221093.yaml
@@ -13,5 +13,8 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G4: 2.5
   response: 7E905621093FA00
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G4: 2.51
+  response: 7E905621093FB00
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G4: 2.55
   response: 7E905621093FF00
