--- a/tests/test_cases/2021/commands/7E1.7E9.2210A0.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210A0.yaml
@@ -15,3 +15,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GANGSTELLER_C_ADAPT_NEUTRALPOS: -0.04
   response: 7E9056210A0FCFF
+- expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_C_ADAPT_NEUTRALPOS: -0.02
+  response: 7E9056210A0FEFF
