--- a/tests/test_cases/2021/commands/7E1.7E9.22380E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22380E.yaml
@@ -19,6 +19,9 @@ test_cases:
     VOLKSWAGEN_MQB_OUTPUT_SHAFT_1: 374
   response: 7E90562380E7601
 - expected_values:
+    VOLKSWAGEN_MQB_OUTPUT_SHAFT_1: 404
+  response: 7E90562380E9401
+- expected_values:
     VOLKSWAGEN_MQB_OUTPUT_SHAFT_1: 159
   response: 7E90562380E9F00
 - expected_values:
