--- a/tests/test_cases/2021/commands/7E1.7E9.223824.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223824.yaml
@@ -19,5 +19,11 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 4.34
   response: 7E905623824B201
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 7
+  response: 7E905623824BC02
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 7.42
+  response: 7E905623824E602
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 2.5
   response: 7E905623824FA00
