--- a/tests/test_cases/2021/commands/7E1.7E9.22382A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22382A.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.22382A
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 358.5
+  response: 7E90562382A010E
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 365.4
   response: 7E90562382A460E
 - expected_values:
