--- a/tests/test_cases/2021/commands/7E1.7E9.22382E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22382E.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 0
   response: 7E90562382E30F8
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 67.1
+  response: 7E90562382E3E05
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 0
   response: 7E90562382E60FF
 - expected_values:
@@ -18,6 +21,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 60.3
   response: 7E90562382EB604
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 35.5
+  response: 7E90562382EC602
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 125.45
   response: 7E90562382ECD09
