--- a/tests/test_cases/2021/commands/7E1.7E9.22383D.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22383D.yaml
@@ -19,5 +19,8 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 89.5
   response: 7E90562383D7F03
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 350.4
+  response: 7E90562383DB00D
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 50
   response: 7E90562383DF401
