--- a/tests/test_cases/2021/commands/7E0.7E8.221ABA.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ABA.yaml
@@ -4,8 +4,11 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_DISTANCE_SINCE_LAST_REGEN: 1.8
   response: 7E805621ABA0012
 - expected_values:
-    VOLKSWAGEN_MQB_DPF_DISTANCE_SINCE_LAST_REGEN: 19.1
-  response: 7E805621ABA00BF
+    VOLKSWAGEN_MQB_DPF_DISTANCE_SINCE_LAST_REGEN: 102.1
+  response: 7E805621ABA03FD
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_DISTANCE_SINCE_LAST_REGEN: 103.6
+  response: 7E805621ABA040C
 - expected_values:
     VOLKSWAGEN_MQB_DPF_DISTANCE_SINCE_LAST_REGEN: 196.4
   response: 7E805621ABA07AC
