--- a/tests/test_cases/2021/commands/7E0.7E8.222AE2.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.222AE2.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_SIMULATED: 0.1
   response: 7E805622AE21389
 - expected_values:
+    VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_SIMULATED: 0.2
+  response: 7E805622AE2138A
+- expected_values:
     VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_SIMULATED: 0.4
   response: 7E805622AE2138C
 - expected_values:
@@ -18,3 +21,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_SIMULATED: 2.7
   response: 7E805622AE213A3
+- expected_values:
+    VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_SIMULATED: 6.7
+  response: 7E805622AE213CB
