--- a/tests/test_cases/2021/commands/7E1.7E9.22105B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22105B.yaml
@@ -19,6 +19,12 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_2_POS: 10.57
   response: 7E90562105B2104
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_2_POS: 10.61
+  response: 7E90562105B2504
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_2_POS: 10.62
+  response: 7E90562105B2604
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_2_POS: 10.63
   response: 7E90562105B2704
 - expected_values:
