--- a/tests/test_cases/2021/commands/7E1.7E9.221070.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221070.yaml
@@ -22,5 +22,8 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_2_POS: 10.21
   response: 7E905621070FD03
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_2_POS: 10.22
+  response: 7E905621070FE03
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_2_POS: 10.23
   response: 7E905621070FF03
