--- a/tests/test_cases/2021/commands/7E1.7E9.221086.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221086.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G3: 10.21
   response: 7E905621086FD03
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G3: 10.22
+  response: 7E905621086FE03
