--- a/tests/test_cases/2021/commands/7E1.7E9.2210AD.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210AD.yaml
@@ -12,3 +12,12 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G6: 1.82
   response: 7E9056210ADB600
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G6: 1.83
+  response: 7E9056210ADB700
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G6: 1.84
+  response: 7E9056210ADB800
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G6: 1.88
+  response: 7E9056210ADBC00
