--- a/tests/test_cases/2021/commands/7E1.7E9.2210EA.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210EA.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_SUCCESSFUL_ADAPTS_COUNTER: 1843
   response: 7E9056210EA3307
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_SUCCESSFUL_ADAPTS_COUNTER: 1845
+  response: 7E9056210EA3507
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_SUCCESSFUL_ADAPTS_COUNTER: 1847
+  response: 7E9056210EA3707
