--- a/tests/test_cases/2021/commands/7E1.7E9.2210EB.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210EB.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_KISS_POINT_PART_1_ODO_READING: 84150
   response: 7E9056210EBDF20
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_KISS_POINT_PART_1_ODO_READING: 84240
+  response: 7E9056210EBE820
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_KISS_POINT_PART_1_ODO_READING: 84270
+  response: 7E9056210EBEB20
