--- a/tests/test_cases/2021/commands/7E1.7E9.223827.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223827.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_ACTUAL: 378
   response: 7E905623827C40E
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_ACTUAL: 1198
+  response: 7E905623827CC2E
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_ACTUAL: 379
   response: 7E905623827CE0E
 - expected_values:
