--- a/tests/test_cases/2021/commands/7E1.7E9.223838.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223838.yaml
@@ -22,5 +22,8 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 96
   response: '7E9056238388007'
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 58.05
+  response: '7E9056238388904'
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 21.7
   response: 7E905623838B201
