--- a/tests/test_cases/2021/commands/7E1.7E9.22388B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22388B.yaml
@@ -12,3 +12,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 1975
   response: 7E90562388BB707
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 1976
+  response: 7E90562388BB807
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 1977
+  response: 7E90562388BB907
