--- a/tests/test_cases/2021/commands/7E0.7E8.2210D6.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210D6.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_INJ_1_RAIL_P_2: 0.0112
   response: 7E8056210D600E0
+- expected_values:
+    VOLKSWAGEN_PQ35_INJ_1_RAIL_P_2: 0.0116
+  response: 7E8056210D600E8
