--- a/tests/test_cases/2021/commands/7E0.7E8.2215AA.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2215AA.yaml
@@ -23,4 +23,7 @@ test_cases:
   response: 7E8056215AA0019
 - expected_values:
     VOLKSWAGEN_PQ35_SELECTED_GEAR: 0
+  response: 7E8056215AA0040
+- expected_values:
+    VOLKSWAGEN_PQ35_SELECTED_GEAR: 0
   response: 7E8056215AA0053
