--- a/tests/test_cases/2021/commands/7E0.7E8.221ACB.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ACB.yaml
@@ -7,6 +7,12 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_STATISTICS_ROUTE_IN_CHARGE_CYCLE: 32
   response: 7E804621ACB04
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_STATISTICS_ROUTE_IN_CHARGE_CYCLE: 64
+  response: 7E804621ACB08
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_STATISTICS_ROUTE_IN_CHARGE_CYCLE: 96
+  response: 7E804621ACB0C
+- expected_values:
     VOLKSWAGEN_MQB_DPF_STATISTICS_ROUTE_IN_CHARGE_CYCLE: 160
   response: 7E804621ACB14
 - expected_values:
