--- a/tests/test_cases/2021/commands/7E1.22101A.yaml
+++ b/tests/test_cases/2021/commands/7E1.22101A.yaml
@@ -5,9 +5,9 @@ test_cases:
     VOLKSWAGEN_PQ35_ODO_3: 4097
   response: 7E90762101A00100100
 - expected_values:
-    VOLKSWAGEN_ODO_TCM_2: 83980
-    VOLKSWAGEN_PQ35_ODO_3: 804865
-  response: 7E90762101A0C480100
+    VOLKSWAGEN_ODO_TCM_2: 84252
+    VOLKSWAGEN_PQ35_ODO_3: 1853697
+  response: 7E90762101A1C490100
 - expected_values:
     VOLKSWAGEN_ODO_TCM_2: 67378
     VOLKSWAGEN_PQ35_ODO_3: 3278593
