--- a/tests/test_cases/2021/commands/7E1.7E9.221059.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221059.yaml
@@ -10,5 +10,11 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_1_POS: 4.21
   response: 7E905621059A501
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_1_POS: 4.22
+  response: 7E905621059A601
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_1_POS: 4.23
+  response: 7E905621059A701
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_1_POS: 4.25
   response: 7E905621059A901
