--- a/tests/test_cases/2021/commands/7E1.7E9.221083.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221083.yaml
@@ -13,6 +13,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G1: -2.66
   response: 7E905621083F6FE
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G1: -2.65
+  response: 7E905621083F7FE
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G1: -2.61
   response: 7E905621083FBFE
 - expected_values:
