--- a/tests/test_cases/2021/commands/7E1.7E9.221090.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221090.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G2: -9.83
   response: 7E90562109029FC
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G2: -9.81
+  response: 7E9056210902BFC
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G2: -9.8
   response: 7E9056210902CFC
 - expected_values:
