--- a/tests/test_cases/2021/commands/7E1.7E9.2210A0.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210A0.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GANGSTELLER_C_ADAPT_NEUTRALPOS: 0.01
   response: 7E9056210A00100
 - expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_C_ADAPT_NEUTRALPOS: 0.02
+  response: 7E9056210A00200
+- expected_values:
     VOLKSWAGEN_PQ35_GANGSTELLER_C_ADAPT_NEUTRALPOS: -0.07
   response: 7E9056210A0F9FF
 - expected_values:
@@ -16,5 +19,11 @@ test_cases:
     VOLKSWAGEN_PQ35_GANGSTELLER_C_ADAPT_NEUTRALPOS: -0.04
   response: 7E9056210A0FCFF
 - expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_C_ADAPT_NEUTRALPOS: -0.03
+  response: 7E9056210A0FDFF
+- expected_values:
     VOLKSWAGEN_PQ35_GANGSTELLER_C_ADAPT_NEUTRALPOS: -0.02
   response: 7E9056210A0FEFF
+- expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_C_ADAPT_NEUTRALPOS: -0.01
+  response: 7E9056210A0FFFF
