--- a/tests/test_cases/2021/commands/7E1.7E9.2210A1.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210A1.yaml
@@ -10,5 +10,8 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G7: -1.65
   response: 7E9056210A15BFF
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G7: -1.63
+  response: 7E9056210A15DFF
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G7: -1.62
   response: 7E9056210A15EFF
