--- a/tests/test_cases/2021/commands/7E1.7E9.223821.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223821.yaml
@@ -4,11 +4,20 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_ACTUAL: 0
   response: '7E9056238210000'
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_ACTUAL: 6.05
+  response: 7E9056238215D02
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_ACTUAL: 3.78
+  response: 7E9056238217A01
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_ACTUAL: 3.79
   response: 7E9056238217B01
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_ACTUAL: 3.85
   response: '7E9056238218101'
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_ACTUAL: 3.94
+  response: 7E9056238218A01
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_ACTUAL: 4.24
   response: 7E905623821A801
