--- a/tests/test_cases/2021/commands/7E1.7E9.223824.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223824.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.223824
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 15.73
+  response: '7E9056238242506'
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 6.24
   response: '7E9056238247002'
 - expected_values:
