--- a/tests/test_cases/2021/commands/7E1.7E9.22383E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22383E.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_ACTUAL: 487
   response: 7E90562383E0613
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_ACTUAL: 628
+  response: 7E90562383E8818
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_ACTUAL: 42
   response: 7E90562383EA401
 - expected_values:
