--- a/tests/test_cases/2021/commands/7E1.7E9.22388C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22388C.yaml
@@ -18,3 +18,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 491
   response: 7E90562388CEB01
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 492
+  response: 7E90562388CEC01
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 493
+  response: 7E90562388CED01
