--- a/tests/test_cases/2021/commands/7E1.7E9.223834.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223834.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.223834
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 384.9
+  response: 7E905623834090F
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 671.7
   response: 7E9056238343D1A
 - expected_values:
