--- a/tests/test_cases/2021/commands/7E1.7E9.223838.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223838.yaml
@@ -27,3 +27,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 21.7
   response: 7E905623838B201
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 24.35
+  response: 7E905623838E701
