--- a/tests/test_cases/2021/commands/7E0.7E8.222AE2.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.222AE2.yaml
@@ -19,6 +19,9 @@ test_cases:
     VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_SIMULATED: 0.8
   response: 7E805622AE21390
 - expected_values:
+    VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_SIMULATED: 1.3
+  response: 7E805622AE21395
+- expected_values:
     VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_SIMULATED: 2.7
   response: 7E805622AE213A3
 - expected_values:
