--- a/tests/test_cases/2021/commands/7E1.7E9.22106E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22106E.yaml
@@ -22,5 +22,8 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_1_POS: 4.3
   response: 7E90562106EAE01
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_1_POS: 4.31
+  response: 7E90562106EAF01
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_1_POS: 4.32
   response: 7E90562106EB001
