--- a/tests/test_cases/2021/commands/7E1.7E9.22382A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22382A.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 358.5
   response: 7E90562382A010E
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 358.9
+  response: 7E90562382A050E
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 359.7
   response: 7E90562382A0D0E
 - expected_values:
