--- a/tests/test_cases/2021/commands/7E1.7E9.22388C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22388C.yaml
@@ -24,3 +24,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 493
   response: 7E90562388CED01
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 494
+  response: 7E90562388CEE01
