--- a/tests/test_cases/2021/commands/7E1.7E9.221062.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221062.yaml
@@ -3,3 +3,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_FRICTION_VALUE_CORRECTION_FACTOR: 100
   response: '7E9056210620004'
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_FRICTION_VALUE_CORRECTION_FACTOR: 100
+  response: '7E9056210621604'
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_FRICTION_VALUE_CORRECTION_FACTOR: 100
+  response: '7E9056210628809'
