--- a/tests/test_cases/2021/commands/7E1.7E9.2210CA.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210CA.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_KISS_POINT_PART_1_ODO_READING: 84190
   response: 7E9056210CAE320
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_KISS_POINT_PART_1_ODO_READING: 84320
+  response: 7E9056210CAF020
