--- a/tests/test_cases/2021/commands/7E0.7E8.221024.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221024.yaml
@@ -1,14 +1,17 @@
 command_id: 7E0.7E8.221024
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_AIR_MASS_1: 22.3
+  response: 7E80562102400DF
+- expected_values:
     VOLKSWAGEN_MQB_AIR_MASS_1: 24.2
   response: 7E80562102400F2
 - expected_values:
     VOLKSWAGEN_MQB_AIR_MASS_1: 27.7
   response: '7E8056210240115'
 - expected_values:
-    VOLKSWAGEN_MQB_AIR_MASS_1: 32.2
-  response: '7E8056210240142'
+    VOLKSWAGEN_MQB_AIR_MASS_1: 30.6
+  response: '7E8056210240132'
 - expected_values:
     VOLKSWAGEN_MQB_AIR_MASS_1: 196
   response: 7E80562102407A8
