--- a/tests/test_cases/2021/commands/7E0.7E8.221813.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221813.yaml
@@ -10,5 +10,5 @@ test_cases:
     VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 25.2
   response: 7E80562181300FC
 - expected_values:
-    VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 36.5
-  response: 7E805621813016D
+    VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 59.8
+  response: '7E8056218130256'
