--- a/tests/test_cases/2021/commands/7E1.7E9.221090.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221090.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G2: -9.8
   response: 7E9056210902CFC
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G2: -9.79
+  response: 7E9056210902DFC
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G2: -9.78
   response: 7E9056210902EFC
 - expected_values:
