--- a/tests/test_cases/2021/commands/7E1.7E9.2210AD.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210AD.yaml
@@ -19,5 +19,8 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G6: 1.84
   response: 7E9056210ADB800
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G6: 1.87
+  response: 7E9056210ADBB00
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G6: 1.88
   response: 7E9056210ADBC00
