--- a/tests/test_cases/2021/commands/7E1.7E9.2210C9.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210C9.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_SUCCESSFUL_ADAPTS_COUNTER: 1918
   response: 7E9056210C97E07
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_SUCCESSFUL_ADAPTS_COUNTER: 1920
+  response: 7E9056210C98007
