--- a/tests/test_cases/2021/commands/7E1.7E9.2210EA.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210EA.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_SUCCESSFUL_ADAPTS_COUNTER: 1847
   response: 7E9056210EA3707
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_SUCCESSFUL_ADAPTS_COUNTER: 1848
+  response: 7E9056210EA3807
