--- a/tests/test_cases/2021/commands/7E1.7E9.2210EB.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210EB.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_KISS_POINT_PART_1_ODO_READING: 84270
   response: 7E9056210EBEB20
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_KISS_POINT_PART_1_ODO_READING: 84310
+  response: 7E9056210EBEF20
