--- a/tests/test_cases/2021/commands/7E1.7E9.22388B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22388B.yaml
@@ -18,3 +18,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 1977
   response: 7E90562388BB907
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 1978
+  response: 7E90562388BBA07
